Atualizações de JS e CSS do codificador

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<h1>Índice</h1>
+<h1>Índice de Desafios</h1>
 
 <ul>
-	<li><a href="./desafios/d01-1_encriptador/index.html">Desafio 01 - Codificador</a></li>
+	<li><a href="./desafios/d01-1_encriptador/index.html">Desafio 1.1 - Encriptador</a></li>
+	<li><a href="#">Desafio 1.2 - Jogo da Forca</a></li>
+	<li><a href="#">Desafio 2.1 - Portfólio</a></li>
+	<li><a href="#">Desafio 2.2 - eCommerce</a></li>
+	<li><a href="#">Desafio 3.1 - Conversor de Moedas</a></li>
+	<li><a href="#">Desafio 3.2 - Hotel Alura</a></li>
 </ul>
